--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ default: &default
   encoding: unicode
   host: localhost
   port: 5432
-  username: bruno
-  password: 9901
+  username: postgres
+  password: 123
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 
